fix header alignment and word-wrap on links

--- a/src/components/ExternalLink.module.scss
+++ b/src/components/ExternalLink.module.scss
@@ -3,6 +3,12 @@
 .link {
 	color: $external-link-color;
 	font-size: 14px;
+	word-wrap: break-word;
+	white-space: pre-wrap; /* Since CSS 2.1 */
+	white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+	white-space: -pre-wrap; /* Opera 4-6 */
+	white-space: -o-pre-wrap; /* Opera 7 */
+	word-wrap: break-word; /* Internet Explorer 5.5+ */
 	.externalIcon {
 		color: #999;
 		margin-left: 5px;
