--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -48,8 +48,8 @@
 		}
 		section {
 			display: block;
-			margin-left: 75px;
-			line-height: 25px;
+			margin-left: 60px;
+			line-height: 20px;
 			padding-bottom: 10px;
 			span {
 				display: inline-block;
