--- a/src/components/Technologies.module.scss
+++ b/src/components/Technologies.module.scss
@@ -15,7 +15,7 @@
 		margin: 0 !important;
 		line-height: 30px;
 		img {
-			padding: 10px 0;
+			padding: 9px 0;
 		}
 		a {
 			font-size: 12px;
