--- a/src/styles/dimensions.scss
+++ b/src/styles/dimensions.scss
@@ -1,3 +1,3 @@
 $header-height: 50px;
-$small-screen-header-height: calc(#{$header-height} + 35px);
+$small-screen-header-height: calc(#{$header-height} + 31px);
 $footer-height: 30px;
